samples/_failures_safe/1761299103_3c5d5c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_178c84a4.c: In function ‘main’:
./samples/SAFE/__tmp_178c84a4.c:173:47: error: ‘MAX_TO’ undeclared (first use in this function); did you mean ‘MAX_TOKENS’?
  173 |     int token_count = tokenize(input, tokens, MAX_TO
      |                                               ^~~~~~
      |                                               MAX_TOKENS
./samples/SAFE/__tmp_178c84a4.c:173:47: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_178c84a4.c:173:53: error: expected ‘)’ at end of input
  173 |     int token_count = tokenize(input, tokens, MAX_TO
      |                               ~                     ^
      |                                                     )
./samples/SAFE/__tmp_178c84a4.c:173:5: error: expected declaration or statement at end of input
  173 |     int token_count = tokenize(input, tokens, MAX_TO
      |     ^~~
